fixed sidebar and dashboard inspect overlapping

--- a/web/src/components/summary/summaryCard/summary-card.module.scss
+++ b/web/src/components/summary/summaryCard/summary-card.module.scss
@@ -17,7 +17,7 @@
   }
 
   &.expanded {
-    z-index: 999;
+    z-index: 99;
     height: 200px;
     margin-bottom: -112px;
     background: var(--color-primary-faint);
